[metadata]
name = ztools
version = attr: ztools.__version__
keywords = ztools
description = ToolBox for Python, Easy to Use.
author = Zou Mingzhe
author_email = zoumingzhe@qq.com
url = https://github.com/zoumingzhe/ztools
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Source Code = https://github.com/zoumingzhe/ztools
    Bug Tracker = https://github.com/zoumingzhe/ztools/issues
    Documentation = https://github.com/zoumingzhe/ztools

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires =
packages = find:

[options.entry_points]
console_scripts =

[options.packages.find]
include = ztools*
exclude =
    tests
